# tensorflow-c-mnist

./: CMakeLists.txt  tf.cpp
